# kfbridge-prototypes

./: Cargo.toml  readme.md
apps/kapp/: Cargo.toml
apps/kapp/src/: main.rs
apps/kapp/src/qml/: Main.qml
apps/simple/: Cargo.toml
apps/simple/src/: main.rs
apps/simple/src/qml/: Main.qml
apps/simplemdviewer/src/: main.rs
apps/simplemdviewer/src/qml/: Main.qml
kf-gen/: Cargo.toml
kf-gen/src/: main.rs
kf-gen/src/input/: klocalization.rs
kf-type-lib/: Cargo.toml  generated_files_bridge.rs  generated_files_cpp.rs
kf-type-lib/src/: generated.rs  qt_types.rs
kf-types/: Cargo.toml  build.rs
kf-types/src/: lib.rs  rustconv.h
kf-types/src/ki18n/: klocalization.cpp  klocalization.h  klocalization.rs  mod.rs
simplemdviewer/: Cargo.toml
simplemdviewer/src/: main.rs
